<resources>
    <string name="app_name">Item Tracker</string>
    <string name="name">Name</string>
    <string name="missing_broken_items">Missing/Broken Items</string>
    <string name="item_name">Item Name...</string>
    <string name="item_id">Item Id...</string>
    <string name="broken">Broken</string>
    <string name="missing">Missing</string>
    <string name="add">Add</string>
    <string name="item_details">Item Details...</string>
    <string name="view_all">View All</string>
    <string name="delete">Delete</string>
    <string name="item_details2">Item Details</string>
    <string name="back">back</string>
</resources>